--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pogoda2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jadame10.github.io/Weather-Forecast/",
+  "homepage": "https://jadame10.github.io/weather-forecast/",
   "dependencies": {
     "@react-google-maps/api": "^2.4.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
